--- a/style.css
+++ b/style.css
@@ -196,6 +196,8 @@ video {
 
 #nav .nav-menu-list a {
   text-transform: uppercase;
+  padding: 10px 3px;
+  display: block;
 }
 
 /* video css start */
@@ -217,8 +219,12 @@ video {
 
 /* page1 css start */
 
+#page1 {
+  position: relative;
+}
+
 #page1 .container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: relative;
   z-index: 10;
@@ -230,6 +236,26 @@ video {
   font-weight: 900;
   position: relative;
   text-align: center;
+}
+
+#page1 #arrow {
+  height: 250px;
+  width: 250px;
+  background-color: transparent;
+  border: 2px solid #95c11e;
+  position: absolute;
+  display: flex;
+  left: -2%;
+  bottom: 0%;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: all ease 0.5s;
+}
+
+#page1 #arrow i {
+  font-size: 50px;
+  font-weight: 100;
 }
 
 #page1 h1::before {
@@ -400,6 +426,132 @@ video {
   max-width: 40%;
   line-height: 1.6;
   color: #000;
+}
+
+/* page3 css start */
+
+#page3 {
+  background-color: #000;
+  width: 100%;
+  height: 100vh;
+}
+
+#page3 .container {
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+#page3 h3 {
+  font-size: 35px;
+  font-weight: 700;
+  width: 60%;
+  line-height: 45px;
+  text-align: center;
+}
+
+#page3 #colon1 {
+  position: absolute;
+  left: 15%;
+  top: 25%;
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+}
+
+#page3 #colon2 {
+  position: absolute;
+  right: 15%;
+  bottom: 25%;
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+}
+
+/* page4 css start  */
+
+#page4 {
+  position: relative;
+}
+
+#page4 .card-inner {
+  width: 100%;
+}
+
+#page4 h1 {
+  font-size: 6.4vw;
+  position: absolute;
+  top: -10%;
+  font-weight: 900;
+  font-family: gilroy;
+  color: #000;
+  -webkit-text-stroke: 2px #fff;
+}
+
+#page4 .card-inner .card {
+  height: 150px;
+}
+
+/* footer css start */
+#footer {
+  height: 40vh;
+  width: 100%;
+  background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 6.5vw;
+  padding: 0 100px;
+  margin: 6rem 0 0 0;
+}
+#footer > img {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  z-index: 0;
+  width: auto;
+}
+#f1 img {
+  height: 100px;
+}
+#f1,
+#f2,
+#f3,
+#f4 {
+  width: fit-content;
+  position: relative;
+  z-index: 99;
+  /* background-color: red; */
+}
+#f2 h3 {
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
+
+#f3 h3 {
+  font-size: 1.6vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 800;
+  margin-bottom: 8px;
+}
+#f4 h4 {
+  font-size: 1vw;
+  white-space: nowrap;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 8px;
 }
 
 @media screen and (max-width: 1600px) {
